...
    ),
    "EMI" to listOf("emi", "loan", "installment", "finance", "bajaj finserv", "hdfc fin", "idfc first"),
    "Entertainment" to listOf(
        "movie", "cinema", "tickets", "pvr", "inox", "bookmyshow", "netflix", "prime video",
        "hotstar", "disney", "spotify", "wynk", "jiosaavn", "gaana", "concert", "theatre", "youtube", "prime"
    ),
    "Food & Drinks" to listOf(
        "food", "restaurant", "cafe", "swiggy", "zomato", "eats", "kitchen", "dining", "pizza",
        "burger", "thindi", "khana", "hotel", "sagar", "bhavan", "udupi", "andhra", "domino's",
        "pizza", "mcdonald's", "kfc", "box8", "biryani", "dosa", "juice", "coffee",
        "starbucks", "cafe coffee day", "barista", "chai", "bakery", "sweets", "eatsure", "donald",
        "domino", "truffles", "kanavali", "dakshin"
    ),
...
